force-app/main/default/objects/LVC_Order__c/LVC_Order__c.object-meta.xml
<CustomObject>
    <label>Pedido</label>
    <nameField>
        <displayFormat>PED-{0000000000}</displayFormat>
        <label>Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>