force-app/main/default/objects/LVC_Order__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Dirección</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>