force-app/main/default/objects/LVC_Order__c/fields/DeliveryRouteExternalId__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouteExternalId__c</fullName>
    <label>Delivery Route External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>