force-app/main/default/objects/LVC_Order__c/fields/DeliveryRouteId__c.field-meta.xml
<CustomField>
    <fullName>DeliveryRouteId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ruta de Reparto</label>
    <referenceTo>LVC_DeliveryRoute__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Pedidos</relationshipName>
    <type>Lookup</type>
</CustomField>