force-app/main/default/objects/LVC_Order__c/fields/OrderExternalId__c.field-meta.xml
<CustomField>
    <fullName>OrderExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Pedido External Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>