force-app/main/default/objects/LVC_Order__c/fields/OrderQuantityDate__c.field-meta.xml
<CustomField>
    <fullName>OrderQuantityDate__c</fullName>
    <label>Cantidad del Pedido Fecha</label>
    <referenceTo>LVC_OrderQuantityDate__c</referenceTo>
    <relationshipLabel>Pedidos</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>